<resources>
    <string name="app_name">Student_Subject_Data</string>
    <string name="registration_number">Registration Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="subject">Subject</string>
    <string name="edit_button">Edit Button</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_button">Add Button</string>
    <string name="see_batchmates">See Batchmates</string>
    <string name="see_your_subjects">See Your Subjects</string>
    <string name="subjects">Subjects</string>
    <string name="new_user_register">New User? Register</string>
    <string name="register">Register</string>
</resources>