<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="99"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue_500"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/add_subject"
            android:textAlignment="center"
            android:layout_weight="99"
            android:textColor="@color/off_white"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue_500"
            android:contentDescription="@string/add_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@android:drawable/ic_menu_add"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/blue_500"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/see_batchmates"
            android:textAlignment="center"
            android:textColor="@color/off_white" />

    </LinearLayout>
</LinearLayout>